--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "AlphabotMD",
+  "name": "boyzsem",
   "version": "1.0.7",
   "description": "Alpha Bot Multi Device, Only update in YouTube ZEEONE OFC",
   "main": "zeeone.js",
@@ -19,7 +19,7 @@
     "baileys-md",
     "bot"
   ],
-  "author": "ZeeoneOfc",
+  "author": "boyzbot",
   "license": "MIT",
   "dependencies": {
     "@adiwajshing/baileys": "github:adiwajshing/baileys",
